feat: add onboarding and reset password verification email
