# duitkita-api/model/dto/request/auth_req.go
@@ -14,3 +14,23 @@ type LoginRequest struct {
 type RefreshTokenRequest struct {
 	RefreshToken string `json:"refresh_token" binding:"required"`
 }
+
+type VerifyOTPRequest struct {
+	Email string `json:"email" binding:"required,email"`
+	OTP   string `json:"otp" binding:"required,len=6,numeric"`
+}
+
+type ResendOTPRequest struct {
+	Email   string `json:"email" binding:"required,email"`
+	Purpose string `json:"purpose" binding:"required,oneof=register reset_password"`
+}
+
+type ForgotPasswordRequest struct {
+	Email string `json:"email" binding:"required,email"`
+}
+
+type ResetPasswordRequest struct {
+	Email       string `json:"email" binding:"required,email"`
+	OTP         string `json:"otp" binding:"required,len=6,numeric"`
+	NewPassword string `json:"new_password" binding:"required,min=8"`
+}
